--- a/uiux_index.html
+++ b/uiux_index.html
@@ -782,7 +782,7 @@
                         <div class="progress_item progress_medium_item progress_medium_item_right_padding">
                             <div class="progress_item_time font_bold"><span>2014.05&nbsp;-&nbsp;2016.04</span><br />網站設計</div>
                             <div class="progress_item_content">
-                                <span class="font_bold">政府網站接案公司</span>，負責響應式網站設計和HTML、CSS無障礙前端切版。
+                                <span class="font_bold">政府網站接案公司</span>，負責響應式網站設計和Html、Css無障礙前端切版。
                             </div>
                             <div class="progress_item_spot progress_medium_item_spot spot_right set_middle">
                                 <div>
@@ -804,7 +804,7 @@
                         <div class="progress_item progress_medium_item progress_medium_item_left_padding">
                             <div class="progress_item_time font_bold"><span>2016.04&nbsp;-&nbsp;2021.03</span><br />產品設計</div>
                             <div class="progress_item_content">
-                                <span class="font_bold">教育類科技公司任職</span>，網站產品和管理後台使用發想和製作、網站介面設計與HTML、SCSS前端切版建置使用Jquery做介面互動視覺效果、APP產品維運更版。
+                                <span class="font_bold">教育類科技公司任職</span>，網站產品和管理後台使用發想和製作、網站介面設計與Html、Css前端切版建置使用Jquery做介面互動視覺效果、APP產品維運更版。
                             </div>
                             <div class="progress_item_content" style="margin-top:3px;">
                                 <ul style="list-style:disc;padding-left:23px;">
@@ -843,7 +843,7 @@
                         <div class="progress_item progress_large_item progress_large_item_right_padding">
                             <div class="progress_item_time font_bold"><span>2021.03&nbsp;-&nbsp;2024.05</span><br />UI.UX設計</div>
                             <div class="progress_item_content">
-                                <span class="font_bold">系統開發商(金融、保險)任職</span>，專案客戶皆為集團級企業，各類2C網站、APP產品、2B後台系統的功能流程規劃和介面設計；網站HTML、SCSS撰寫切版建置，並使用Jquery做介面互動視覺效果。
+                                <span class="font_bold">系統開發商(金融、保險)任職</span>，專案客戶皆為集團級企業，各類2C網站、APP產品、2B後台系統的功能流程規劃和介面設計；網站Html、Scss撰寫切版建置，並使用Jquery做介面互動視覺效果。
                             </div>
                             <div class="progress_item_content" style="margin-top:3px;">
                                 <ul style="list-style:disc;padding-left:23px;">
