--- a/yulon_works_1.html
+++ b/yulon_works_1.html
@@ -95,7 +95,15 @@
                     <div class="pup_content">
                         <div class="part_title h5 font_bold emphasize_text">前言</div>
                         <div class="pup_normal_text">
-                            訪談裕隆相關單位，<span class="emphasize_text">了解APP製作起因、大致資料項目、過往作業流程和表單內容</span>，接續規劃操作流程、功能機制。
+                            <span>集團總管理處想要<br /></span>
+                            <div class="pup_text" style="margin-top:5px;padding-left:20px;">
+                                <ul class="text_item_list pup_normal_text_small emphasize_text" style="list-style:disc">
+                                    <li>加強對子公司布達資訊之效率。</li>
+                                    <li>取代員工以內部信箱申請福利商品、活動的方式</li>
+                                    <li>優化審核員工申請福利之流程。</li>
+                                </ul>
+                            </div>
+                            訪談裕隆相關單位了解現有業務流程和表單文件進行系統使用流程和功能規劃。
                         </div>
                     </div>
                 </div>
@@ -103,13 +111,12 @@
                 <div class="pup_window_content_part project_content_part">
                     <div class="pup_content">
                         <div class="part_title h5 font_bold emphasize_text">一、定義產品核心</div>
-                        <div class="pup_normal_text">除了幫助使用者完成操作目標，更需定義<span class="emphasize_text">產品使用後，能給營運方、使用者哪些價值，</span><br/>確保規劃內容符合開發成本。</div>
-                        <div class="pup_normal_text">因此藉由訪談裕隆管理單位窗口，了解集團和員工之間的角色定位和需求，討論產品理念和營運價值。</div>
+                        <div class="pup_normal_text">除了完成開發目標，<span class="emphasize_text">需清楚定義並強化產品使用價值，<br />確保規劃內容優於開發成本。</span></div>
                         <div class="pup_content_text">
                             <div class="text_row">
                                 <div class="text_item">
-                                    <div class="text_item_title h6 emphasize_text">理念：</div>
-                                    <div class="pup_normal_text">幫助集團與員工(使用者)能更加貼近、相互契合，讓員工APP成為集團營運的一股助力。</div>
+                                    <div class="text_item_title h6 emphasize_text">產品理念：</div>
+                                    <div class="pup_normal_text">幫助集團與員工更加貼近、相互契合，讓員工APP成為集團營運的一股助力。</div>
                                 </div>
                             </div>
                         </div>
@@ -118,10 +125,10 @@
                                 <div class="text_item">
                                     <div class="text_item_title h6 emphasize_text">營運價值：</div>
                                     <ul class="text_item_list" style="list-style:decimal">
-                                        <li><span class="emphasize_text">透過員工福利機制</span>(品牌商品、娛樂活動、團購...等)，使集團能更融於員工生活增加認同感。</li>
-                                        <li>藉由<span class="emphasize_text">APP為載體發送內部訊息</span>直接給予員工，取代總管理處→各公司管理處→部門主管→員工的傳達方式，<span class="emphasize_text">優化集團政策布達效率。</span></li>
-                                        <li>優先發布集團職缺給予員工，可於集團內轉換職場跑道，也可推薦親友應徵，<span class="emphasize_text">提升員工對於集團的忠誠度</span></li>
-                                        <li><span class="emphasize_text">收集不具個別員工識別度的使用數據</span>(如：內部訊息點擊率、員工福利項目申請率)，了解員工偏好，<span class="emphasize_text">提供集團員工政策之參考依據</span>，間接確保良好的員工體驗。</li>
+                                        <li><span class="emphasize_text">透過員工福利</span>(品牌商品、娛樂活動、團購...等)，使集團融於員工生活強化認同感。</li>
+                                        <li>藉由<span class="emphasize_text">APP直接傳達集團訊息至員工手機</span>，取代總管理處→各公司管理處→部門主管→員工的傳達方式，<span class="emphasize_text">優化布達速度和確定性。</span></li>
+                                        <li><span class="emphasize_text">再利用「員工申請福利」功能模組，增設「申請集團職缺」，</span>優化集團人才資源存留和獲取，<span class="emphasize_text">分化產品開發成本、增加使用價值。</span></li>
+                                        <li><span class="emphasize_text">收集不具個別員工識別的使用數據</span>(如：內部訊息點擊率、員工福利項目申請率)，<span class="emphasize_text">了解員工偏好，提供員工政策之參考，間接確保良好的員工體驗。</span></li>
                                     </ul>
                                 </div>
                             </div>
