--- a/uiux_index.html
+++ b/uiux_index.html
@@ -269,7 +269,7 @@
                 <div class="page_list_item_page_choice">
                     <div id="p7_menu"><a href="#p7">永豐銀行&nbsp;網路投保網站</a></div>
                     <div id="p8_menu"><a href="#p8">元大期貨槓桿&nbsp;官方網站</a></div>
-                    <div id="p9_menu"><a href="#p9">裕隆集團&nbsp;員工APP&amp;2B管理後台</a></div>
+                    <div id="p9_menu"><a href="#p9">裕隆集團&nbsp;2B員工APP&amp;管理後台</a></div>
                     <div id="p10_menu"><a href="#p10">金融服務商&nbsp;投資交易APP</a></div>
                     <div id="p11_menu"><a href="#p11">泰安產物&nbsp;產品行銷專案</a></div>
                 </div>
@@ -341,7 +341,7 @@
                                 <div class="list_line"></div><a id="p3_list" href="#p3" class="list_page_num appear-animation" data-appear-animation="fadeInLeft">3</a>
                             </li>
                             <div class="list_note_container">
-                                <div class="list_note_tag">專案合作成員對我的看法</div>
+                                <div class="list_note_tag" style="color:#232323;">專案合作成員對我的看法</div>
                             </div>
                             <li>
                                 <div class="list_page_name">專長技能</div>
@@ -351,6 +351,9 @@
                                 <div class="list_page_name">職涯與規劃</div>
                                 <div class="list_line"></div><a id="p5_list" href="#p5" class="list_page_num appear-animation" data-appear-animation="fadeInLeft">5</a>
                             </li>
+                            <div class="list_note_container">
+                                <div class="list_note_tag" style="color:#232323;">產品發想思維-案例分享</div>
+                            </div>
                         </ul>
                     </div>
                     <div class="page_catalog_part">
@@ -361,7 +364,7 @@
                                 <div class="list_line"></div><a id="p7_list" href="#p7" class="list_page_num appear-animation" data-appear-animation="fadeInLeft">7</a>
                             </li>
                             <div class="list_note_container">
-                                <div class="list_note_tag">產品規劃&nbsp;→&nbsp;介面&amp;視覺設計&nbsp;→&nbsp;前端原型製作</div>
+                                <div class="list_note_tag" style="color:#232323;">2C產品需求規劃&nbsp;→&nbsp;介面&amp;視覺設計&nbsp;→&nbsp;前端原型製作</div>
                             </div>
                             <li>
                                 <div class="list_page_name">元大期貨槓桿&nbsp;官方網站</div>
@@ -371,18 +374,18 @@
                                 <div class="list_note_tag">官網介面&amp;視覺原型</div>
                             </div>
                             <li>
-                                <div class="list_page_name">裕隆集團&nbsp;<br>員工APP&amp;2B管理後台</div>
+                                <div class="list_page_name">裕隆集團&nbsp;<br>2B員工APP&amp;管理後台</div>
                                 <div class="list_line"></div><a id="p9_list" href="#p9" class="list_page_num appear-animation" data-appear-animation="fadeInLeft">9</a>
                             </li>
                             <div class="list_note_container">
-                                <div class="list_note_tag">產品規劃&nbsp;→&nbsp;介面視覺原型</div>
+                                <div class="list_note_tag" style="color:#232323;">產品規劃思維(強化開發價值)&nbsp;→&nbsp;2B前、後台介面設計原型</div>
                             </div>
                             <li>
                                 <div class="list_page_name">金融服務商&nbsp;<br>投資交易APP</div>
                                 <div class="list_line"></div><a id="p10_list" href="#p10" class="list_page_num appear-animation" data-appear-animation="fadeInLeft">10</a>
                             </li>
                             <div class="list_note_container">
-                                <div class="list_note_tag">產品提案思維&nbsp;→&nbsp;介面視覺原型</div>
+                                <div class="list_note_tag" style="color:#232323;">產品提案思維(強化營利循環)&nbsp;→&nbsp;2C介面設計原型</div>
                             </div>
                             <li>
                                 <div class="list_page_name">泰安產物&nbsp;活動網頁</div>
@@ -517,7 +520,7 @@
                     </ul>
                 </div>
                 <a href="info_attribute_tell.html">
-                    <div class="info_attribute_tell_btn appear-animation" data-appear-animation="fadeInUp" role="button">專案成員對我的看法</div>
+                    <div class="info_attribute_tell_btn appear-animation" data-appear-animation="fadeInUp" role="button">專案合作成員對我的看法</div>
                 </a>
                 <div class="info_attribute_container">
                     <div class="info_attribute_title h2 font_bold">工作特質</div>
@@ -1202,7 +1205,7 @@
             </div>
             <div class="page_content_container">
                 <div class="page_content_title">
-                    <div class="page_content_title_name">裕隆&nbsp;員工APP和2B管理後台</div>
+                    <div class="page_content_title_name">裕隆&nbsp;2B員工APP&amp;管理後台</div>
                     <div class="page_content_title_line"></div>
                 </div>
 
@@ -1858,13 +1861,13 @@
                         <div class="work_info_text font_bold" style="margin-top:10px;">與兩家上市企業設計部門競爭標案，介面和視覺提案勝出得標。</div>
                     </div>
                     <div class="work_info_part">
-                        <div class="work_info_title h3 font_bold">裕隆集團&nbsp;員工APP&amp;2B管理後台</div>
+                        <div class="work_info_title h3 font_bold">裕隆集團&nbsp;2B員工APP&amp;管理後台</div>
                         <div class="work_info_text">
                             <ul>
                                 <li>緊密訪談客戶相關單位，作為產品規劃基礎。</li>
                                 <li>能盤點產品資料來源、互動機制、頁面布局。</li>
                                 <li>製作線框稿，交代前、後台頁面操作，和前、後端資料關係。</li>
-                                <li>了解2C-APP前台、2B-管理後台，版型製作要點。</li>
+                                <li>了解2B-APP前台、管理後台，版型製作要點。</li>
                                 <li>運用UX原則，進行介面設計。</li>
                                 <li>深度排版、配色技巧，交付成熟度高之介面設計稿。</li>
                                 <li>貼合產品開發，提供介面樣式庫文件。</li>
