--- a/uiux_index.html
+++ b/uiux_index.html
@@ -352,7 +352,7 @@
                                 <div class="list_line"></div><a id="p5_list" href="#p5" class="list_page_num appear-animation" data-appear-animation="fadeInLeft">5</a>
                             </li>
                             <div class="list_note_container">
-                                <div class="list_note_tag" style="color:#232323;">產品發想思維-案例分享</div>
+                                <div class="list_note_tag" style="color:#232323;">產品規劃思維-案例分享</div>
                             </div>
                         </ul>
                     </div>
