--- a/yulon_works_1.html
+++ b/yulon_works_1.html
@@ -111,7 +111,7 @@
                 <div class="pup_window_content_part project_content_part">
                     <div class="pup_content">
                         <div class="part_title h5 font_bold emphasize_text">一、定義產品核心</div>
-                        <div class="pup_normal_text">除了完成開發目標，<span class="emphasize_text">需清楚定義並強化產品使用價值，<br />降低不符開發成本的風險。</span></div>
+                        <div class="pup_normal_text">除了完成產品需求目標外，<span class="emphasize_text">定義和強化使用價值，<br />降低不符開發成本之風險。</span></div>
                         <div class="pup_content_text">
                             <div class="text_row">
                                 <div class="text_item">
