--- a/uiux_index.html
+++ b/uiux_index.html
@@ -1142,19 +1142,19 @@
                         <div id="p8-2_title" class="work_info_title h3 font_bold">個人負責工作</div>
                         <div class="work_info_subpart">
                             <div class="work_info_subtitle h4 font_bold">
-                                <div class="subtitle_dot set_middle"><img src="images/subtitle_dot.png"></div>視覺提案
+                                <div class="subtitle_dot set_middle"><img src="images/subtitle_dot.png"></div>介面視覺提案
                             </div>
                             <div class="work_info_subtext">
                                 我方公司與<span class="font_bold">兩家上市企業的設計部門競爭提案</span>，個人分析客戶營業屬性，發想製作兩款介面風格，設計符合客戶的期待並<span class="font_bold">取得標案</span>。
                             </div>
                             <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
                                 <img src="images/pup_link_dot.png" class="pup_link_dot">
-                                <span><a href="yuanta_works_1.html">介面風格(一)</a></span>
+                                <span><a href="yuanta_works_1.html">視覺風格(一)</a></span>
                             </div>
                             <div style="margin-top:10px;">
                                 <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
                                     <img src="images/pup_link_dot.png" class="pup_link_dot">
-                                    <span><a href="yuanta_works_2.html">介面風格(二)</a></span>
+                                    <span><a href="yuanta_works_2.html">視覺風格(二)</a></span>
                                 </div>
                             </div>
                             <div class="work_info_note">
