--- a/uiux_index.html
+++ b/uiux_index.html
@@ -1250,7 +1250,7 @@
                                             進行需求訪談，依記錄規劃APP&amp;2B管理後台內容，繪製線框稿Wireframe使專案開發有所依據、對焦共識。
                                         </div>
                                         <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
-                                            <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="yulon_works_1.html">產品規劃</a></span>
+                                            <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="yulon_works_1.html">產品規劃(強化開發價值)</a></span>
                                         </div>
                                         <div style="margin-top:10px;">
                                             <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
@@ -1289,13 +1289,13 @@
                             <div class="work_info_title h3 font_bold">個人負責工作</div>
                             <div class="work_info_subpart">
                                 <div class="work_info_subtitle h4 font_bold">
-                                    <div class="subtitle_dot set_middle"><img src="images/subtitle_dot.png"></div>內容規劃
+                                    <div class="subtitle_dot set_middle"><img src="images/subtitle_dot.png"></div>規劃APP&amp;管理後台
                                 </div>
                                 <div class="work_info_subtext">
                                     進行需求訪談，依記錄規劃APP&amp;2B管理後台內容，繪製線框稿Wireframe使專案開發有所依據、對焦共識。
                                 </div>
                                 <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
-                                    <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="yulon_works_1.html">產品規劃</a></span>
+                                    <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="yulon_works_1.html">產品規劃(強化開發價值)</a></span>
                                 </div>
                                 <div style="margin-top:10px;">
                                     <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
@@ -1399,14 +1399,14 @@
                                     <div class="work_info_title h3 font_bold">個人負責工作</div>
                                     <div class="work_info_subpart">
                                         <div class="work_info_subtitle h4 font_bold">
-                                            <div class="subtitle_dot set_middle"><img src="images/subtitle_dot.png"></div>產品提案
+                                            <div class="subtitle_dot set_middle"><img src="images/subtitle_dot.png"></div>規劃內容架構
                                         </div>
                                         <div class="work_info_subtext">
                                             參照品牌網站內容，發想APP產品核心概念、制定頁面架構內容、分析視覺形象，與客戶凝聚出設計共識和執行方向。
                                         </div>
                                         <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
                                             <div class="pup_link_container_tip">點擊藍色文字可查看內容</div>
-                                            <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="gapp_works_1.html">提案內容</a></span>
+                                            <img src="images/pup_link_dot.png" class="pup_link_dot"><span><a href="gapp_works_1.html">產品提案(強化營利循環)</a></span>
                                         </div>
                                         <div class="work_info_note">
                                             <div style="font-size:16px;color:#232323;"><span>*</span>以加速使用者旅程，提高營利循環效率作為產品規劃方向。</div>
@@ -1436,14 +1436,14 @@
                             <div class="work_info_title h3 font_bold">個人負責工作</div>
                             <div class="work_info_subpart">
                                 <div class="work_info_subtitle h4 font_bold">
-                                    <div class="subtitle_dot set_middle"><img src="images/subtitle_dot.png"></div>產品提案
+                                    <div class="subtitle_dot set_middle"><img src="images/subtitle_dot.png"></div>規劃內容架構
                                 </div>
                                 <div class="work_info_subtext">
                                     參照品牌網站內容，發想APP產品核心概念、制定頁面架構內容、分析視覺形象，與客戶凝聚出設計共識和執行方向。
                                 </div>
                                 <div class="pup_link_container font_bold appear-animation" data-appear-animation="fadeInUp">
                                     <img src="images/pup_link_dot.png" class="pup_link_dot">
-                                    <span><a href="gapp_works_1.html">提案內容</a></span>
+                                    <span><a href="gapp_works_1.html">產品提案(強化營利循環)</a></span>
                                 </div>
                                 <div class="work_info_note">
                                     <div style="font-size:16px;color:#232323;"><span>*</span>以加速使用者旅程，提高營利循環效率作為產品規劃方向。</div>
@@ -1550,7 +1550,7 @@
                                 <div class="subtitle_dot set_middle"><img src="images/subtitle_dot.png"></div>數據追蹤
                             </div>
                             <div class="work_info_subtext">
-                                有SEO觀念和行銷人員討論關鍵字定義，並設置GA和GTM追蹤事件。
+                                有SEO觀念和行銷人員討論行銷接觸點、關鍵字定義，並設置GA和GTM追蹤事件。
                             </div>
                         </div>
                     </div>
@@ -1867,13 +1867,13 @@
                                 <li>緊密訪談客戶相關單位，作為產品規劃基礎。</li>
                                 <li>能盤點產品資料來源、互動機制、頁面布局。</li>
                                 <li>製作線框稿，交代前、後台頁面操作，和前、後端資料關係。</li>
-                                <li>了解2B-APP前台、管理後台，版型製作要點。</li>
+                                <li>了解2B-APP前台、管理後台，版型、功能製作要點。</li>
                                 <li>運用UX原則，進行介面設計。</li>
                                 <li>深度排版、配色技巧，交付成熟度高之介面設計稿。</li>
                                 <li>貼合產品開發，提供介面樣式庫文件。</li>
                             </ul>
                         </div>
-                        <div class="work_info_text font_bold" style="margin-top:10px;">定義2C2B產品核心，規劃內容切合業務需求，完成介面視覺原型。</div>
+                        <div class="work_info_text font_bold" style="margin-top:10px;">定義2B產品核心強化使用價值，規劃內容切合業務需求，完成介面設計原型。</div>
                     </div>
                     <div class="work_info_part">
                         <div class="work_info_title h3 font_bold">金融服務商&nbsp;投資交易APP</div>
@@ -1887,7 +1887,7 @@
                                 <li>運用UX原則，進行介面設計。</li>
                             </ul>
                         </div>
-                        <div class="work_info_text font_bold" style="margin-top:10px;">分析使用者旅程，以提升產品營利為規劃內容，完成介面視覺原型。</div>
+                        <div class="work_info_text font_bold" style="margin-top:10px;">分析使用者旅程，以提升產品營利循環為規劃內容，完成介面設計原型。</div>
                     </div>
                     <div class="work_info_part">
                         <div class="work_info_title h3 font_bold">泰安產物&nbsp;活動網頁</div>
@@ -1897,9 +1897,10 @@
                                 <li>針對行銷主題類型，規劃視覺風格。</li>
                                 <li>掌握版型和風格，交付介面設計稿。</li>
                                 <li>依介面設計稿執行前端RWD切版。</li>
+                                <li>擁有行銷接觸點、GA、GTM觀念。</li>
                             </ul>
                         </div>
-                        <div class="work_info_text font_bold" style="margin-top:10px;">根據行銷人員規劃內容，完成符合形象概念之網頁前端原型。</div>
+                        <div class="work_info_text font_bold" style="margin-top:10px;">根據行銷人員規劃，完成符合形象之網頁前端原型，並討論行銷接觸點和GA、GTM設置。</div>
                     </div>
                     <div class="work_info_part">
                         <div class="work_info_title h3 font_bold">oloo共享交通&nbsp;UXR市場研究</div>
