--- a/uiux_index.html
+++ b/uiux_index.html
@@ -500,7 +500,7 @@
                     <div class="info_personal_pic"></div>
                     <div class="info_personal_describe appear-animation" data-appear-animation="fadeInUp">
                         <div class="info_personal_name h3 font_bold">王俊淵 Joe Wang<span class="large_text display_none_768">76/10/15</span></div>
-                        <div class="info_personal_call h2 font_bold">資深UI.UX設計師<span>&nbsp;‧&nbsp;</span><br>使用規劃到產品更迭</div>
+                        <div class="info_personal_call h2 font_bold">資深UI.UX設計師<span>&nbsp;‧&nbsp;</span><br>產品規劃到原型交付</div>
                         <div class="info_personal_detail display_none_768">
                             <ul>
                                 <li>職涯十年由淺至深的經驗累積。</li>
@@ -1205,7 +1205,7 @@
             </div>
             <div class="page_content_container">
                 <div class="page_content_title">
-                    <div class="page_content_title_name">裕隆&nbsp;2B員工APP&amp;管理後台</div>
+                    <div class="page_content_title_name">裕隆員工App和管理後台</div>
                     <div class="page_content_title_line"></div>
                 </div>
 
