--- a/uiux_index.html
+++ b/uiux_index.html
@@ -268,7 +268,7 @@
                 </div>
                 <div class="page_list_item_page_choice">
                     <div id="p7_menu"><a href="#p7">永豐銀行&nbsp;網路投保網站</a></div>
-                    <div id="p8_menu"><a href="#p8">元大期貨槓桿&nbsp;官方網站</a></div>
+                    <div id="p8_menu"><a href="#p8">元大期貨&nbsp;槓桿交易商官網</a></div>
                     <div id="p9_menu"><a href="#p9">裕隆集團&nbsp;2B員工APP&amp;管理後台</a></div>
                     <div id="p10_menu"><a href="#p10">金融服務商&nbsp;投資交易APP</a></div>
                     <div id="p11_menu"><a href="#p11">泰安產物&nbsp;產品行銷專案</a></div>
@@ -367,7 +367,7 @@
                                 <div class="list_note_tag" style="color:#232323;">2C產品需求規劃&nbsp;→&nbsp;介面&amp;視覺設計&nbsp;→&nbsp;前端原型製作</div>
                             </div>
                             <li>
-                                <div class="list_page_name">元大期貨槓桿&nbsp;官方網站</div>
+                                <div class="list_page_name">元大期貨&nbsp;槓桿交易商官網</div>
                                 <div class="list_line"></div><a id="p8_list" href="#p8" class="list_page_num appear-animation" data-appear-animation="fadeInLeft">8</a>
                             </li>
                             <div class="list_note_container">
@@ -500,7 +500,7 @@
                     <div class="info_personal_pic"></div>
                     <div class="info_personal_describe appear-animation" data-appear-animation="fadeInUp">
                         <div class="info_personal_name h3 font_bold">王俊淵 Joe Wang<span class="large_text display_none_768">76/10/15</span></div>
-                        <div class="info_personal_call h2 font_bold">資深UI.UX設計師<span>&nbsp;‧&nbsp;</span><br>產品規劃到原型交付</div>
+                        <div class="info_personal_call h2 font_bold">資深UI.UX設計師<span>&nbsp;‧&nbsp;</span><br>產品規劃到測試迭代</div>
                         <div class="info_personal_detail display_none_768">
                             <ul>
                                 <li>職涯十年由淺至深的經驗累積。</li>
@@ -1118,7 +1118,7 @@
             </div>
             <div class="page_content_container">
                 <div id="p8-1_title" class="page_content_title">
-                    <div class="page_content_title_name">元大期貨槓桿&nbsp;官方網站</div>
+                    <div class="page_content_title_name">元大期貨&nbsp;槓桿交易商官網</div>
                     <div class="page_content_title_line"></div>
                 </div>
 
@@ -1127,7 +1127,7 @@
                     <div class="work_info_part">
                         <div class="work_info_title h3 font_bold">專案介紹</div>
                         <div class="work_info_text">
-                            參考<a href="yuanta_info.html" class="pup_info_link">元大期貨官網</a>架構內容，製作「期貨槓桿交易商」的官方網站。
+                            參考<a href="yuanta_info.html" class="pup_info_link">元大期貨官網</a>架構內容，製作「槓桿交易商」的官方網站。
                         </div>
                         <div class="project_img_container">
                             <picture>
@@ -1850,7 +1850,7 @@
                         <div class="work_info_text font_bold" style="margin-top:10px;">從產品需求規劃到交付產品前端原型，具有深度的專案執行力。</div>
                     </div>
                     <div class="work_info_part">
-                        <div class="work_info_title h3 font_bold">元大期貨槓桿&nbsp;官方網站</div>
+                        <div class="work_info_title h3 font_bold">元大期貨&nbsp;槓桿交易商官網</div>
                         <div class="work_info_text">
                             <ul>
                                 <li>了解官方網站，版型製作要點。</li>
