--- a/uiux_index.html
+++ b/uiux_index.html
@@ -616,7 +616,7 @@
                     <div class="info_skill_title h3 font_bold">數位產品設計</div>
                     <div class="info_skill_item">
                         <div>
-                            <div class="info_skill_item_title h5 font_bold">產品規劃：</div>
+                            <div class="info_skill_item_title h5 font_bold">產品規劃</div>
                             <div class="info_skill_item_text">
                                 透過桌面研究、訪談使用者，依需求情境規劃內容，統整資訊架構和操作流程，製作線框稿使開發有所依據、對焦共識。
                             </div>
@@ -625,7 +625,7 @@
                             </div>
                         </div>
                         <div>
-                            <div class="info_skill_item_title h5 font_bold">原型製作：</div>
+                            <div class="info_skill_item_title h5 font_bold">原型製作</div>
                             <div class="info_skill_item_text">
                                 運用視覺理論於專案實作，對產業類型規劃合適風格，並延伸至介面設計完成介面設計稿，根據易用性原則完善操作體驗，並提供設計規範文件。
                             </div>
@@ -635,7 +635,7 @@
                             </div>
                         </div>
                         <div>
-                            <div class="info_skill_item_title h5 font_bold">維運更迭：</div>
+                            <div class="info_skill_item_title h5 font_bold">維運更迭</div>
                             <div class="info_skill_item_text">
                                 對目標客群進行易用性測試，並統整報告給予行動建議，和團隊討論執行成本和開發順序。
                             </div>
@@ -651,7 +651,7 @@
                         <div id="p4_title" class="info_skill_title h3 font_bold">軟體操作</div>
                         <div class="info_skill_item">
                             <div class="item_check_padding">
-                                <div class="info_skill_item_title h5 font_bold">Photoshop：</div>
+                                <div class="info_skill_item_title h5 font_bold">Photoshop</div>
                                 <div class="info_skill_item_text">
                                     熟悉軟體功能，配合圖庫網站和AI繪圖，有效率完成視覺設計。
                                 </div>
@@ -663,7 +663,7 @@
                                 </div>
                             </div>
                             <div class="item_check_padding">
-                                <div class="info_skill_item_title h5 font_bold">Illustrator：</div>
+                                <div class="info_skill_item_title h5 font_bold">Illustrator</div>
                                 <div class="info_skill_item_text">
                                     能製作扁平風格的插畫素材、圖標Icon、Logo，轉為SVG圖檔用於介面設計。
                                 </div>
@@ -675,7 +675,7 @@
                                 </div>
                             </div>
                             <div>
-                                <div class="info_skill_item_title h5 font_bold">Figma：</div>
+                                <div class="info_skill_item_title h5 font_bold">Figma</div>
                                 <div class="info_skill_item_text">
                                     4~5年製作網站、APP介面的使用經驗，懂Auto Layout、Component、Library、Prototype設置。
                                 </div>
@@ -684,15 +684,25 @@
                                     <img src="images/info_skill_pic_3-2.png" alt="Figma logo">
                                 </div>
                             </div>
+                            <div>
+                                <div class="info_skill_item_title h5 font_bold">Animate</div>
+                                <div class="info_skill_item_text">
+                                    可展示產品原型操作的互動效果。
+                                </div>
+                                <div class="info_skill_item_note" style="display:none;">*工作專案有成果展示</div>
+                                <div class="info_skill_item_pic">
+                                    <img src="images/info_skill_pic_14.png" alt="Figma logo">
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="info_skill_part">
                         <div class="info_skill_title h3 font_bold">網站建置技術</div>
                         <div class="info_skill_item">
                             <div>
-                                <div class="info_skill_item_title h5 font_bold">RWD網頁設計：</div>
+                                <div class="info_skill_item_title h5 font_bold">RWD網頁設計</div>
                                 <div class="info_skill_item_text">
-                                    熟悉設計響應式網站介面，並以Html、Css切版成初步原型(Prototype)。
+                                    熟悉設計響應式網站介面，並以Html、Css切版前端原型(Prototype)。
                                 </div>
                                 <div class="info_skill_item_note" style="display:none;">*工作專案有成果展示</div>
                                 <div class="info_skill_item_pic">
@@ -702,9 +712,9 @@
                                 </div>
                             </div>
                             <div>
-                                <div class="info_skill_item_title h5 font_bold">Jquery：</div>
+                                <div class="info_skill_item_title h5 font_bold">Jquery</div>
                                 <div class="info_skill_item_text">
-                                    能運用製作網站原型(Prototype)的操作元件，如：選單收合、彈跳視窗、Tab切換內容...等。
+                                    製作網站原型(Prototype)介面互動效果，如：選單收合、彈跳視窗、Tab切換內容...等。
                                 </div>
                                 <div class="info_skill_item_note" style="display:none;">*工作專案有成果展示</div>
                                 <div class="info_skill_item_pic">
@@ -712,7 +722,7 @@
                                 </div>
                             </div>
                             <div>
-                                <div class="info_skill_item_title h5 font_bold">前後端運作概念：</div>
+                                <div class="info_skill_item_title h5 font_bold">前後端運作概念</div>
                                 <div class="info_skill_item_text">
                                     有基礎和工程師討論功能執行面之事務。
                                 </div>
@@ -758,7 +768,7 @@
                     <div class="info_work_progress_item">
                         <div class="progress_item progress_small_item">
                             <div class="progress_item_time font_bold"><span>2013.05&nbsp;-&nbsp;2014.05</span><br />視覺設計專員</div>
-                            <div class="progress_item_content"><span class="font_bold">多媒體、行銷公司任職(客戶有易遊網、長榮航空)</span>，提供公司與合作廠商所需求視覺設計成品，如：行銷活動網頁、EDM、網站廣告banner、DM。</div>
+                            <div class="progress_item_content"><span class="font_bold">多媒體、行銷公司(客戶有易遊網、長榮航空)</span>，製作客戶所需的媒體行銷素材，如：活動網頁、EDM、網路廣告banner、DM。</div>
                             <div class="progress_item_spot progress_small_item_spot spot_left set_middle">
                                 <div>
                                     <img src="images/small_item_spot_icon.png" alt="紙飛機圖案">
@@ -785,7 +795,7 @@
                         <div class="progress_item progress_medium_item progress_medium_item_right_padding">
                             <div class="progress_item_time font_bold"><span>2014.05&nbsp;-&nbsp;2016.04</span><br />網站設計</div>
                             <div class="progress_item_content">
-                                <span class="font_bold">政府網站接案公司</span>，負責響應式網站設計和Html、Css無障礙前端切版。
+                                <span class="font_bold">政府網站接案公司</span>，負責響應式網站設計和Html.Css無障礙前端切版。
                             </div>
                             <div class="progress_item_spot progress_medium_item_spot spot_right set_middle">
                                 <div>
@@ -807,12 +817,12 @@
                         <div class="progress_item progress_medium_item progress_medium_item_left_padding">
                             <div class="progress_item_time font_bold"><span>2016.04&nbsp;-&nbsp;2021.03</span><br />產品設計</div>
                             <div class="progress_item_content">
-                                <span class="font_bold">教育類科技公司任職</span>，網站產品和管理後台規劃和介面設計與Html、Css前端建置搭配Jquery介面互動效果、APP產品維運更版。
+                                <span class="font_bold">教育類科技公司</span>，網站產品和管理後台規劃、介面設計製作、RWD網站版面建置、介面互動效果、APP產品維運更迭。
                             </div>
                             <div class="progress_item_content" style="margin-top:3px;">
                                 <ul style="list-style:disc;padding-left:23px;">
-                                    <li style="margin-bottom:3px;">設計影音解答題本的活動網站，以考前猜題吸引學生註冊，除註冊資料外，並以GA、GTM收集數據；業務經理反饋對產品銷售有很大幫助。</li>
-                                    <li>設計人資單位、家教部管理後台，皆有正面評價。</li>
+                                    <li style="margin-bottom:3px;">規劃影音教材的活動網站，以考前猜題吸引學生註冊，收集註冊資料和GA、GTM數據；業務反饋對產品銷售有明顯幫助。</li>
+                                    <li>規劃人資、家教部管理後台，皆有正面評價。</li>
                                 </ul>
                                 <a href="study_1.html">
                                     <div class="info_skill_item_check font_bold appear-animation ps_works_btn fadeInUp appear-animation-visible" style="text-align:left;margin-top:10px;position:relative;top:0px;left:0px;">
@@ -846,7 +856,7 @@
                         <div class="progress_item progress_large_item progress_large_item_right_padding">
                             <div class="progress_item_time font_bold"><span>2021.03&nbsp;-&nbsp;2024.05</span><br />UI.UX設計</div>
                             <div class="progress_item_content">
-                                <span class="font_bold">系統開發公司任職</span>，專案客戶皆為集團級企業，各類2C網站、APP產品、2B管理後台規劃和介面設計；網站Html、Scss切版建置搭配Jquery介面互動效果。
+                                <span class="font_bold">系統開發公司</span>，客戶皆為集團企業，2C&amp;2B網站、APP和管理後台規劃、介面設計；RWD網站版面建置、介面互動效果。
                             </div>
                             <div class="progress_item_content" style="margin-top:3px;">
                                 <ul style="list-style:disc;padding-left:23px;">
