--- a/uiux_index.html
+++ b/uiux_index.html
@@ -613,12 +613,12 @@
                     <div class="page_content_title_line"></div>
                 </div>
                 <div class="info_skill_part">
-                    <div class="info_skill_title h3 font_bold">數位產品設計</div>
+                    <div class="info_skill_title h3 font_bold">數位產品開發流程</div>
                     <div class="info_skill_item">
                         <div>
-                            <div class="info_skill_item_title h5 font_bold">產品規劃</div>
+                            <div class="info_skill_item_title h5 font_bold">內容規劃</div>
                             <div class="info_skill_item_text">
-                                透過桌面研究、訪談使用者，依需求情境規劃內容，統整資訊架構和操作流程，製作線框稿使開發有所依據、對焦共識。
+                                透過桌面研究、訪談使用者，依需求情境轉化成資訊架構和操作流程，製作線框稿說明功能機制使開發有所依據、對焦共識。
                             </div>
                             <div class="info_skill_item_pic">
                                 <img src="images/info_skill_pic_11.png" alt="VI">
@@ -627,7 +627,7 @@
                         <div>
                             <div class="info_skill_item_title h5 font_bold">原型製作</div>
                             <div class="info_skill_item_text">
-                                運用視覺理論於專案實作，對產業類型規劃合適風格，並延伸至介面設計完成介面設計稿，根據易用性原則完善操作體驗，並提供設計規範文件。
+                                運用視覺理論於專案實作，對產業類型規劃合適風格，並延伸至網站、APP介面設計，根據易用性原則完善操作體驗，並提供設計規範文件。
                             </div>
                             <div class="info_skill_item_note" style="display:none;">*工作專案有應用說明</div>
                             <div class="info_skill_item_pic">
@@ -687,7 +687,7 @@
                             <div>
                                 <div class="info_skill_item_title h5 font_bold">Animate</div>
                                 <div class="info_skill_item_text">
-                                    可展示產品原型操作的互動效果。
+                                    可展示產品原型的介面動態效果。
                                 </div>
                                 <div class="info_skill_item_note" style="display:none;">*工作專案有成果展示</div>
                                 <div class="info_skill_item_pic">
@@ -697,10 +697,10 @@
                         </div>
                     </div>
                     <div class="info_skill_part">
-                        <div class="info_skill_title h3 font_bold">網站建置技術</div>
+                        <div class="info_skill_title h3 font_bold">網站建置</div>
                         <div class="info_skill_item">
                             <div>
-                                <div class="info_skill_item_title h5 font_bold">RWD網頁設計</div>
+                                <div class="info_skill_item_title h5 font_bold">RWD前端切版</div>
                                 <div class="info_skill_item_text">
                                     熟悉設計響應式網站介面，並以Html、Css切版前端原型(Prototype)。
                                 </div>
@@ -721,14 +721,29 @@
                                     <img src="images/info_skill_pic_6-2.png" alt="Jquery logo">
                                 </div>
                             </div>
+                        </div>
+                    </div>
+                    <div class="info_skill_part">
+                        <div class="info_skill_title h3 font_bold">技術觀念</div>
+                        <div class="info_skill_item">
                             <div>
-                                <div class="info_skill_item_title h5 font_bold">前後端運作概念</div>
+                                <div class="info_skill_item_title h5 font_bold">網站前、後端程式概念</div>
                                 <div class="info_skill_item_text">
-                                    有基礎和工程師討論功能執行面之事務。
+                                    有基礎和工程師討論網站功能開發之事務。
                                 </div>
                                 <div class="info_skill_item_note" style="display:none;">*工作專案有成果展示</div>
                                 <div class="info_skill_item_pic">
                                     <img src="images/info_skill_pic_10-2.png" alt="code logo">
+                                </div>
+                            </div>
+                            <div>
+                                <div class="info_skill_item_title h5 font_bold">iOS、Google設計規範</div>
+                                <div class="info_skill_item_text">
+                                    了解APP原生介面元件運用準則，使APP設計稿貼合程式開發。
+                                </div>
+                                <div class="info_skill_item_note" style="display:none;">*工作專案有成果展示</div>
+                                <div class="info_skill_item_pic">
+                                    <img src="images/info_skill_pic_15.png" alt="code logo">
                                 </div>
                             </div>
                         </div>
